tests/compile_fail/unknown_type_attr.stderr
error: unknown angelscript attribute: unknown_attr
 --> tests/compile_fail/unknown_type_attr.rs:6:15
  |
6 | #[angelscript(unknown_attr)]
  |               ^^^^^^^^^^^^
